--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 
 /* Default styles for all screens */
 body {
+	/* background-color:#875e84; */
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -59,12 +60,7 @@ img {
     width: 90%;
     max-width: 1200px;
     margin: 0 auto;
-}
-
-
-
-
-
+} 
 
 .icons a {
     font-size: 29px !important;  /* Adjust size as needed */
